--- a/HotelManagement/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement/HotelManagement.csproj
@@ -142,6 +142,10 @@
     <Compile Include="ViewModels\LoginViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\ReportsViewModel.cs" />
+    <Compile Include="ViewModels\Reservation\BindingProxy.cs" />
+    <Compile Include="ViewModels\Reservation\NewReservationViewModel.cs" />
+    <Compile Include="ViewModels\Reservation\ReservationListViewModel.cs" />
+    <Compile Include="ViewModels\Reservation\ReservationViewModel.cs" />
     <Compile Include="ViewModels\RoomsViewModels.cs" />
     <Compile Include="Views\BookingView.xaml.cs">
       <DependentUpon>BookingView.xaml</DependentUpon>
@@ -163,6 +167,12 @@
     </Compile>
     <Compile Include="Views\ReportsView.xaml.cs">
       <DependentUpon>ReportsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Reservation\NewReservationWindow.xaml.cs">
+      <DependentUpon>NewReservationWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Reservation\ReservationListView.xaml.cs">
+      <DependentUpon>ReservationListView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RoomsView.xaml.cs">
       <DependentUpon>RoomsView.xaml</DependentUpon>
@@ -210,6 +220,14 @@
     <Page Include="Views\ReportsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Reservation\NewReservationWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Reservation\ReservationListView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\RoomsView.xaml">
       <SubType>Designer</SubType>
