--- a/HotelManagement/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement/HotelManagement.csproj
@@ -158,7 +158,7 @@
     <Compile Include="ViewModels\ReportsViewModel.cs" />
     <Compile Include="ViewModels\Reservation\BindingProxy.cs" />
     <Compile Include="ViewModels\Reservation\NewReservationViewModel.cs" />
-    <Compile Include="ViewModels\Reservation\PageNavigationViewModel.cs" />
+    <Compile Include="ViewModels\PageNavigationViewModel.cs" />
     <Compile Include="ViewModels\Reservation\ReservationDetailsViewModel.cs" />
     <Compile Include="ViewModels\Reservation\ReservationListViewModel.cs" />
     <Compile Include="ViewModels\RoomsViewModels.cs" />
@@ -201,6 +201,9 @@
     </Compile>
     <Compile Include="Views\Reservation\AddBookedRoomWindow.xaml.cs">
       <DependentUpon>AddBookedRoomWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PageNavigationView.xaml.cs">
+      <DependentUpon>PageNavigationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Reservation\ReservationDetailsWindow.xaml.cs">
       <DependentUpon>ReservationDetailsWindow.xaml</DependentUpon>
@@ -290,6 +293,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Reservation\AddBookedRoomWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PageNavigationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
