--- a/HotelManagement/HotelManagement/packages.config
+++ b/HotelManagement/HotelManagement/packages.config
@@ -2,10 +2,12 @@
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
-  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.3" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.2.1" targetFramework="net472" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net472" />
+  <package id="TagBites.WinSchedulers" version="1.3.1" targetFramework="net472" />
+  <package id="Xamarin.Forms" version="4.5.0.617" targetFramework="net472" />
 </packages>
