--- a/HotelManagement/HotelManagement/App.config
+++ b/HotelManagement/HotelManagement/App.config
@@ -17,6 +17,6 @@
   </runtime>
   <connectionStrings>
     <add name="HotelManagementEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot; 
-      data source=LAPTOP-0QNM76CK\;initial catalog=HotelManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      data source=.\sqlexpress;initial catalog=HotelManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
