--- a/HotelManagement/HotelManagement/HotelManagement.csproj
+++ b/HotelManagement/HotelManagement/HotelManagement.csproj
@@ -471,6 +471,7 @@
       <DependentUpon>Model.edmx</DependentUpon>
       <LastGenOutput>Model.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="Models\Model.edmx.sql" />
     <Content Include="Models\Model.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model.edmx</DependentUpon>
