--- a/HotelManagement/HotelManagement/App.config
+++ b/HotelManagement/HotelManagement/App.config
@@ -21,6 +21,6 @@
   </runtime>
   <connectionStrings>
     <add name="HotelManagementEntities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot; 
-      data source=.\sqlexpress;initial catalog=HotelManagement;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+      Data Source=localhost,14333;Initial Catalog=HotelManagement;User ID=sa;Password=PassW0rd;Encrypt=False;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
